--- a/EntrevistiaWEB/EntrevistiaWEB/Views/Home/InicioCliente.cshtml
+++ b/EntrevistiaWEB/EntrevistiaWEB/Views/Home/InicioCliente.cshtml
@@ -20,7 +20,7 @@
                     <span class="u-name">@Session["Nombre"]</span>
                     <span class="u-mail">@Session["Email"]</span>
                 </div>
-                <a href="@Url.Action("Logout", "Account")" class="btn-exit">Salir</a>
+                <a href="@Url.Action("Login", "Home")" class="btn-exit">Salir</a>
             </div>
         </header>
 
